--- a/index.html
+++ b/index.html
@@ -15,6 +15,17 @@
     <header>
         <nav class="container main-nav">
             <a href="index.html" class="webstudio webstudio-header"><span class="accent">Web</span>Studio</a>
+            <button type="button" class="button-menu is-open" data-menu-button aria-expanded="false">
+
+                <svg width="40" height="40" aria-label="Переключатель мобильного меню">
+                    <use class="icon-close" href="./img/icon/sprite.svg#close"></use>
+                    <use class="icon-menu" href="./img/icon/sprite.svg#menu"></use>
+
+                </svg>
+            </button>
+            <div class="menu-container">
+                Контент меню
+            </div>
             <ul class="site-nav list">
 
                 <li class="item"><a href="index.html" class="link current">Студия</a> </li>
@@ -479,6 +490,7 @@
         </nav>
     </footer>
     <script src="./js/modal.js"></script>
+    <script src="./js/menu.js"></script>
 </body>
 
 </html>
