--- a/index.html
+++ b/index.html
@@ -13,44 +13,50 @@
 <body>
     <!-- ШАПКА САЙТА -->
     <header>
-        <nav class="main-nav container">
-            <a href="index.html" class="webstudio webstudio-header"><span class="accent">Web</span>Studio</a>
-            <button type="button" class="button-menu" aria-expanded="false" aria-controls="menu-container"
-                data-menu-button>
+        <nav class="main-nav">
+            <div class="container">
+                <a href="index.html" class="webstudio webstudio-header"><span class="accent">Web</span>Studio</a>
+                <button type="button" class="button-menu" aria-expanded="false" aria-controls="menu-container"
+                    data-menu-button>
 
-                <svg width="40" height="40" aria-label="Переключатель мобильного меню">
-                    <use class="icon-close" href="./img/icon/sprite.svg#close"></use>
-                    <use class="icon-menu" href="./img/icon/sprite.svg#menu"></use>
+                    <svg width="40" height="40" aria-label="Переключатель мобильного меню">
+                        <use class="icon-close" href="./img/icon/sprite.svg#close"></use>
+                        <use class="icon-menu" href="./img/icon/sprite.svg#menu"></use>
 
-                </svg>
-            </button>
-            <div class="menu-container" id="menu-container" data-menu>
-                Контент меню
+                    </svg>
+                </button>
+
+                <div class="menu-container" id="menu-container" data-menu>
+                    <div class="navigation">
+                        <ul class="site-nav list">
+
+                            <li class="item"><a href="index.html" class="link current">Студия</a> </li>
+                            <li class="item"><a href="portfolio.html" class="link">Портфолио</a> </li>
+                            <li class="item"><a href="" class="link">Контакты</a> </li>
+                        </ul>
+                    </div>
+
+                    <div class="contacts">
+                        <ul class="auth-nav list">
+
+                            <li class="item">
+                                <a href="mailto:info@devstudio.com" class="link">
+                                    <svg class="auth-icon-svg">
+                                        <use href="./img/icon/sprite.svg#mail-icon"></use>
+                                    </svg>info@devstudio.com
+                                </a>
+                            </li>
+                            <li class="item">
+                                <a href="tel:+380961111111" class="link">
+                                    <svg class="auth-icon-svg">
+                                        <use href="./img/icon/sprite.svg#phone-icon"></use>
+                                    </svg>+38 096 111 11 11
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </div>
-            <ul class="site-nav list">
-
-                <li class="item"><a href="index.html" class="link current">Студия</a> </li>
-                <li class="item"><a href="portfolio.html" class="link">Портфолио</a> </li>
-                <li class="item"><a href="" class="link">Контакты</a> </li>
-            </ul>
-
-            <ul class="auth-nav list">
-
-                <li class="item">
-                    <a href="mailto:info@devstudio.com" class="link">
-                        <svg class="auth-icon-svg">
-                            <use href="./img/icon/sprite.svg#mail-icon"></use>
-                        </svg>info@devstudio.com
-                    </a>
-                </li>
-                <li class="item">
-                    <a href="tel:+380961111111" class="link">
-                        <svg class="auth-icon-svg">
-                            <use href="./img/icon/sprite.svg#phone-icon"></use>
-                        </svg>+38 096 111 11 11
-                    </a>
-                </li>
-            </ul>
         </nav>
     </header>
 
