--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
     </main>
 
 
-    <footer class="footer-main">
+    <!-- <footer class="footer-main">
         <nav class="container-footer">
             <div>
                 <a href="index.html" class="webstudio webstudio-footer"><span class="accent">Web</span>Studio</a>
@@ -554,7 +554,7 @@
                 <input class="in-subscribe" type="email" name="subscribe" placeholder="E-mail" id="subscribe">
             </div>
         </nav>
-    </footer>
+    </footer> -->
     <script src="./js/modal.js"></script>
     <script src="./js/menu.js"></script>
 </body>
