--- a/index.html
+++ b/index.html
@@ -24,41 +24,37 @@
 
                     </svg>
                 </button>
-                <div class="container">
 
+                <div class="menu-container" id="menu-container" data-menu>
+                    <div class="navigation">
+                        <ul class="site-nav">
 
-                    <div class="menu-container" id="menu-container" data-menu>
-                        <div class="navigation">
-                            <ul class="site-nav list">
+                            <li class="item"><a href="index.html" class="link current">Студия</a> </li>
+                            <li class="item"><a href="portfolio.html" class="link">Портфолио</a> </li>
+                            <li class="item"><a href="" class="link">Контакты</a> </li>
+                        </ul>
+                    </div>
 
-                                <li class="item"><a href="index.html" class="link current">Студия</a> </li>
-                                <li class="item"><a href="portfolio.html" class="link">Портфолио</a> </li>
-                                <li class="item"><a href="" class="link">Контакты</a> </li>
-                            </ul>
-                        </div>
+                    <div class="contacts">
+                        <ul class="auth-nav">
 
-                        <div class="contacts">
-                            <ul class="auth-nav list">
-
-                                <li class="item">
-                                    <a href="mailto:info@devstudio.com" class="link">
-                                        <svg class="auth-icon-svg">
-                                            <use href="./img/icon/sprite.svg#mail-icon"></use>
-                                        </svg>info@devstudio.com
-                                    </a>
-                                </li>
-                                <li class="item">
-                                    <a href="tel:+380961111111" class="link">
-                                        <svg class="auth-icon-svg">
-                                            <use href="./img/icon/sprite.svg#phone-icon"></use>
-                                        </svg>+38 096 111 11 11
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
+                            <li class="item">
+                                <a href="mailto:info@devstudio.com" class="link">
+                                    <svg class="auth-icon-svg">
+                                        <use href="./img/icon/sprite.svg#mail-icon"></use>
+                                    </svg>info@devstudio.com
+                                </a>
+                            </li>
+                            <li class="item">
+                                <a href="tel:+380961111111" class="link">
+                                    <svg class="auth-icon-svg">
+                                        <use href="./img/icon/sprite.svg#phone-icon"></use>
+                                    </svg>+38 096 111 11 11
+                                </a>
+                            </li>
+                        </ul>
                     </div>
                 </div>
-
 
 
             </nav>
@@ -534,7 +530,8 @@
                     </a>
                 </li>
             </ul>
-        </section> --> -->
+        </section> -->
+
     </main>
 
 
