--- a/index.html
+++ b/index.html
@@ -24,19 +24,17 @@
 
                     </svg>
                 </button>
-
                 <div class="menu-container" id="menu-container" data-menu>
-                    <div class="navigation">
-                        <ul class="site-nav">
+                    <div class="navigation"></div>
+                    <!-- <ul class="site-nav">
 
                             <li class="item"><a href="index.html" class="link current">Студия</a> </li>
                             <li class="item"><a href="portfolio.html" class="link">Портфолио</a> </li>
                             <li class="item"><a href="" class="link">Контакты</a> </li>
-                        </ul>
-                    </div>
+                        </ul> -->
 
-                    <div class="contacts">
-                        <ul class="auth-nav">
+                    <div class="contacts"></div>
+                    <!-- <ul class="auth-nav">
 
                             <li class="item">
                                 <a href="mailto:info@devstudio.com" class="link">
@@ -52,12 +50,13 @@
                                     </svg>+38 096 111 11 11
                                 </a>
                             </li>
-                        </ul>
-                    </div>
+                        </ul> -->
+
                 </div>
 
 
             </nav>
+
         </div>
 
     </div>
