--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
                     </svg>
                 </button>
                 <div class="menu-container" id="menu-container" data-menu>
-                    <div class="navigation"></div>
-                    <!-- <ul class="site-nav">
+                    <div class="navigation">
+                        <ul class="site-nav">
 
                             <li class="item"><a href="index.html" class="link current">Студия</a> </li>
                             <li class="item"><a href="portfolio.html" class="link">Портфолио</a> </li>
                             <li class="item"><a href="" class="link">Контакты</a> </li>
-                        </ul> -->
-
-                    <div class="contacts"></div>
-                    <!-- <ul class="auth-nav">
+                        </ul>
+                    </div>
+                    <div class="contacts">
+                        <ul class="auth-nav">
 
                             <li class="item">
                                 <a href="mailto:info@devstudio.com" class="link">
@@ -50,8 +50,8 @@
                                     </svg>+38 096 111 11 11
                                 </a>
                             </li>
-                        </ul> -->
-
+                        </ul>
+                    </div>
                 </div>
 
 
