--- a/index.html
+++ b/index.html
@@ -62,6 +62,61 @@
     </div>
 
     <main>
+
+        <!-- ЭФФЕКТИВНЫЕ РЕШЕНИЯ КНОПКА -->
+
+        <section class="effect-solving">
+
+            <h1 class="title-h1">Эффективные решения для вашего бизнеса</h1>
+            <button class="btn" data-modal-open>Заказать услугу</button>
+
+            <div class="backdrop is-hidden" data-modal>
+                <div class="modal">
+                    <p class="modal-font"> Оставьте свои данные, мы вам перезвоним </p>
+                    <div class="form-style-input">
+                        <input class="form-input" type="text" name="name" id="name" />
+                        <label class="form-label" for="name">Имя</label>
+                        <svg class="form-icon">
+                            <use href="./img/icon/sprite.svg#person-black"></use>
+                        </svg>
+                    </div>
+                    <div class="form-style-input">
+                        <input class="form-input" type="tel" name="tel" id="tel">
+                        <label class="form-label" for="tel">Телефон</label>
+                        <svg class="form-icon">
+                            <use href="./img/icon/sprite.svg#phone-black"></use>
+                        </svg>
+                    </div>
+                    <div class="form-style-input">
+                        <input class="form-input" type="email" name="mail" id="mail">
+                        <label class="form-label" for="mail">Почта</label>
+                        <svg class="form-icon">
+                            <use href="./img/icon/sprite.svg#email-black"></use>
+                        </svg>
+                    </div>
+                    <div class="form-style-input">
+                        <textarea class="textarea-form" name="comment" rows="10" placeholder="Введите текст"
+                            id="comment"></textarea>
+                        <label class="form-label" style="top: 20px;" for="comment">Комментарий</label>
+
+                    </div>
+
+                    <label class="checkbox-label">
+                        <input class="checkbox" type="checkbox" name="accept" value="accept" />
+                        <span class="checkbox-icon"></span>
+                        Соглашаюсь с рассылкой и принимаю
+
+                        <a class="form-link" href="">Условия
+                            договора</a>
+                    </label>
+                    <button class="btn-send" type="submit">Отправить</button>
+                    <button class="btn-close" data-modal-close></button>
+                </div>
+
+            </div>
+
+        </section>
+
         <section class="section features">
             <div class=container>
                 <h2 class="section-title">Заголовок первой секции</h2>
@@ -92,59 +147,6 @@
             </div>
 
         </section>
-
-
-
-        <!-- ШАПКА САЙТА
-    <header>
-        <nav class="main-nav">
-            <a href="index.html" class="webstudio webstudio-header"><span class="accent">Web</span>Studio</a>
-            <button type="button" class="button-menu" aria-expanded="false" aria-controls="menu-container"
-                data-menu-button>
-
-                <svg width="40" height="40" aria-label="Переключатель мобильного меню">
-                    <use class="icon-close" href="./img/icon/sprite.svg#close"></use>
-                    <use class="icon-menu" href="./img/icon/sprite.svg#menu"></use>
-
-                </svg>
-            </button>
-            <div class="container">
-
-
-                <div class="menu-container" id="menu-container" data-menu>
-                    <div class="navigation">
-                        <ul class="site-nav list">
-
-                            <li class="item"><a href="index.html" class="link current">Студия</a> </li>
-                            <li class="item"><a href="portfolio.html" class="link">Портфолио</a> </li>
-                            <li class="item"><a href="" class="link">Контакты</a> </li>
-                        </ul>
-                    </div>
-
-                    <div class="contacts">
-                        <ul class="auth-nav list">
-
-                            <li class="item">
-                                <a href="mailto:info@devstudio.com" class="link">
-                                    <svg class="auth-icon-svg">
-                                        <use href="./img/icon/sprite.svg#mail-icon"></use>
-                                    </svg>info@devstudio.com
-                                </a>
-                            </li>
-                            <li class="item">
-                                <a href="tel:+380961111111" class="link">
-                                    <svg class="auth-icon-svg">
-                                        <use href="./img/icon/sprite.svg#phone-icon"></use>
-                                    </svg>+38 096 111 11 11
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </nav>
-    </header> -->
-
         <!-- ЭФФЕКТИВНЫЕ РЕШЕНИЯ КНОПКА -->
         <!-- 
         <section class="effect-solving">
