--- a/index.html
+++ b/index.html
@@ -119,7 +119,51 @@
 
         <section class="section features">
             <div class=container>
-                <h2 class="section-title">Заголовок первой секции</h2>
+
+
+                <!-- НАШИ ПРЕИМУЩЕСТВА -->
+                <section>
+                    <!-- список секции  -->
+                    <!-- <h2>Наше преимущество</h2> -->
+                    <ul class="features-set">
+                        <li class="icon-advantages icon1">
+                            <h3 class='title-h3'>Внимание к деталям</h3>
+                            <p class=" p-advantages">
+                                Идейные соображения, а также
+                                начало повседневной работы по
+                                формированию позиции.
+                            </p>
+                        </li>
+
+                        <li class="icon-advantages icon2">
+                            <h3 class="title-h3">Пунктуальность</h3>
+                            <p class="p-advantages">
+                                Задача организации, в особенности
+                                же рамки и место обучения кадров
+                                влечет за собой.
+                            </p>
+                        </li>
+                        <li class="icon-advantages icon3">
+                            <h3 class="title-h3">Планирование</h3>
+                            <p class="p-advantages">
+                                Равным образом консультация с
+                                широким активом в значительной
+                                степени обуславливает.
+                            </p>
+                        </li>
+                        <li class="icon-advantages icon4">
+                            <h3 class="title-h3">Современные технологии</h3>
+                            <p class="p-advantages">
+                                Значимость этих проблем настолько
+                                очевидна, что реализация плановых
+                                заданий.
+                            </p>
+                        </li>
+                    </ul>
+
+
+
+                    <!-- <h2 class="section-title">Заголовок первой секции</h2>
                 <ul class="features-set">
 
                     <li class="features-item">1</li>
@@ -129,7 +173,7 @@
                     <li class="features-item">5</li>
                     <li class="features-item">6</li>
 
-                </ul>
+                </ul> -->
             </div>
 
         </section>
@@ -147,68 +191,7 @@
             </div>
 
         </section>
-        <!-- ЭФФЕКТИВНЫЕ РЕШЕНИЯ КНОПКА -->
-        <!-- 
-        <section class="effect-solving">
 
-            <h1 class="title-h1">Эффективные решения для вашего бизнеса</h1>
-            <button class="btn" data-modal-open>Заказать услугу</button>
-
-            <div class="backdrop is-hidden" data-modal>
-                <div class="modal">
-
-                    <p class="modal-font"> Оставьте свои данные, мы вам перезвоним </p>
-                    <div class="form-style-input">
-
-                        <input class="form-input" type="text" name="name" id="name" />
-                        <label class="form-label" for="name">Имя</label>
-
-
-                         <span class="form-icon img-name"> -->
-
-        <!-- <svg class="form-icon">
-            <use href="./img/icon/sprite.svg#person-black"></use>
-        </svg>
-
-
-        </div>
-
-        <div class="form-style-input">
-            <input class="form-input" type="tel" name="tel" id="tel">
-            <label class="form-label" for="tel">Телефон</label>
-            <svg class="form-icon">
-                <use href="./img/icon/sprite.svg#phone-black"></use>
-            </svg>
-
-        </div>
-
-        <div class="form-style-input">
-            <input class="form-input" type="email" name="mail" id="mail">
-            <label class="form-label" for="mail">Почта</label>
-            <svg class="form-icon">
-                <use href="./img/icon/sprite.svg#email-black"></use>
-            </svg>
-        </div>
-        <div class="form-style-input">
-            <textarea class="textarea-form" name="comment" rows="10" placeholder="Введите текст"
-                id="comment"></textarea>
-            <label class="form-label" style="top: 20px;" for="comment">Комментарий</label>
-
-        </div>
-
-        <label class="checkbox-label">
-            <input class="checkbox" type="checkbox" name="accept" value="accept" />
-            <span class="checkbox-icon"></span>
-            Соглашаюсь с рассылкой и принимаю
-
-            <a class="form-link" href="">Условия
-                договора</a>
-        </label>
-        <button class="btn-send" type="submit">Отправить</button>
-        <button class="btn-close" data-modal-close></button>
-        </div>
-
-        </div>
 
         </section> -->
 
