--- a/index.html
+++ b/index.html
@@ -165,19 +165,19 @@
         <section class="section whatarewedoing">
             <h2 class="title-h2">Чем мы занимаемся</h2>
             <ul class="container center-container">
-                <li>
+                <li style="position: relative;">
                     <img src="img/img1.png" alt="" width="370">
                     <p class="title-img" style="justify-content:center;
                 align-items: center;">ДЕСКТОПНЫЕ ПРИЛОЖЕНИЯ</p>
 
                 </li>
-                <li>
+                <li style="position: relative;">
                     <img src="img/img2.png" alt="" width="370">
                     <p class="title-img" style="justify-content:center;
                 align-items: center;">МОБИЛЬНЫЕ ПРИЛОЖЕНИЯ</p>
 
                 </li>
-                <li>
+                <li style="position: relative;">
                     <img src="img/img3.png" alt="" width="370">
                     <p class="title-img" style="justify-content:center;
                 align-items: center;">ДИЗАЙНЕРСКИЕ РЕШЕНИЯ</p>
