--- a/index.html
+++ b/index.html
@@ -117,10 +117,8 @@
 
         </section>
 
-        <section class="section features">
+        <section class="section">
             <div class=container>
-
-
                 <!-- НАШИ ПРЕИМУЩЕСТВА -->
                 <section>
                     <!-- список секции  -->
@@ -196,7 +194,6 @@
 
                         <a href="" class="a-link">
                             <img src="img/1.Product_Designer.jpg" alt="" width="270">
-
                             <p class="team-name">Игорь Демьяненко</p>
 
                             <p class="p-position">Product Designer</p>
@@ -387,7 +384,68 @@
                 </ul>
             </div>
         </section>
+        <!-- Секция "Постоянные клиенты" -->
+        <section class="section">
+            <div class="container">
+                <h2 class="title-h2">Постоянные клиенты</h2>
+                <ul class="client-section">
+                    <li class="item-client">
+                        <a class="client-icon-link" href="https://company1.com/" target="_blank"
+                            rel="noopener noreferer">
+                            <svg class="client-icon-svg" width="44.27" height="49.23">
+                                <use href="./img/icon/sprite.svg#client-icon1"></use>
+                            </svg>
 
+                        </a>
+                    </li>
+                    <li class="item-client">
+                        <a class="client-icon-link" href="https://company2.com/" target="_blank"
+                            rel="noopener noreferer">
+                            <svg class="client-icon-svg" width="40" height="52">
+                                <use href="./img/icon/sprite.svg#client-icon2"></use>
+                            </svg>
+
+                        </a>
+                    </li>
+                    <li class="item-client">
+                        <a class="client-icon-link" href="https://company3.com/" target="_blank"
+                            rel="noopener noreferer">
+                            <svg class="client-icon-svg" width="41" height="42.6">
+                                <use href="./img/icon/sprite.svg#client-icon3"></use>
+                            </svg>
+
+                        </a>
+                    </li>
+                    <li class="item-client">
+                        <a class="client-icon-link" href="https://company4.com/" target="_blank"
+                            rel="noopener noreferer">
+                            <svg class="client-icon-svg" width="79.66" height="42.02">
+                                <use href="./img/icon/sprite.svg#client-icon4"></use>
+                            </svg>
+
+                        </a>
+                    </li>
+                    <li class="item-client">
+                        <a class="client-icon-link" href="https://company5.com/" target="_blank"
+                            rel="noopener noreferer">
+                            <svg class="client-icon-svg" width="59" height="47">
+                                <use href="./img/icon/sprite.svg#client-icon5"></use>
+                            </svg>
+
+                        </a>
+                    </li>
+                    <li class="item-client">
+                        <a class="client-icon-link" href="https://company6.com/" target="_blank"
+                            rel="noopener noreferer">
+                            <svg class="client-icon-svg" width="88.48" height="45.44">
+                                <use href="./img/icon/sprite.svg#client-icon6"></use>
+                            </svg>
+
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </section>
 
         <section class="section reviews">
             <div class=container>
