--- a/index.html
+++ b/index.html
@@ -446,89 +446,9 @@
                 </ul>
             </div>
         </section>
-
-        <section class="section reviews">
-            <div class=container>
-
-
-
-                <!-- <h2 class="section-title">Заголовок второй секции</h2>
-                <ul class="reviews-set">
-
-                    <li class="reviews-item">1</li>
-                    <li class="reviews-item">2</li>
-                    <li class="reviews-item">3</li> -->
-
-
-                </ul>
-            </div>
-
-        </section>
-
-
-        </section>
-
-
-
-        <!-- Секция "Постоянные клиенты" -->
-        <!-- <section class="client-section">
-            <h2 class="title-h2">Постоянные клиенты</h2>
-            <ul class="container center-container">
-                <li>
-                    <a class="client-icon-link" href="https://company1.com/" target="_blank" rel="noopener noreferer">
-                        <svg class="client-icon-svg" width="44.27" height="49.23">
-                            <use href="./img/icon/sprite.svg#client-icon1"></use>
-                        </svg>
-
-                    </a>
-                </li>
-                <li>
-                    <a class="client-icon-link" href="https://company2.com/" target="_blank" rel="noopener noreferer">
-                        <svg class="client-icon-svg" width="40" height="52">
-                            <use href="./img/icon/sprite.svg#client-icon2"></use>
-                        </svg>
-
-                    </a>
-                </li>
-                <li>
-                    <a class="client-icon-link" href="https://company3.com/" target="_blank" rel="noopener noreferer">
-                        <svg class="client-icon-svg" width="41" height="42.6">
-                            <use href="./img/icon/sprite.svg#client-icon3"></use>
-                        </svg>
-
-                    </a>
-                </li>
-                <li>
-                    <a class="client-icon-link" href="https://company4.com/" target="_blank" rel="noopener noreferer">
-                        <svg class="client-icon-svg" width="79.66" height="42.02">
-                            <use href="./img/icon/sprite.svg#client-icon4"></use>
-                        </svg>
-
-                    </a>
-                </li>
-                <li>
-                    <a class="client-icon-link" href="https://company5.com/" target="_blank" rel="noopener noreferer">
-                        <svg class="client-icon-svg" width="59" height="47">
-                            <use href="./img/icon/sprite.svg#client-icon5"></use>
-                        </svg>
-
-                    </a>
-                </li>
-                <li>
-                    <a class="client-icon-link" href="https://company6.com/" target="_blank" rel="noopener noreferer">
-                        <svg class="client-icon-svg" width="88.48" height="45.44">
-                            <use href="./img/icon/sprite.svg#client-icon6"></use>
-                        </svg>
-
-                    </a>
-                </li>
-            </ul>
-        </section> -->
-
     </main>
 
-
-    <!-- <footer class="footer-main">
+    <footer class="footer-main">
         <nav class="container-footer">
             <div>
                 <a href="index.html" class="webstudio webstudio-footer"><span class="accent">Web</span>Studio</a>
@@ -586,13 +506,32 @@
             </div>
             <div class="subscribe">
                 <label for="subscribe">Подпишитесь на рассылку</label>
-                <button class="btn-subscribe">Подписаться</button>
                 <input class="in-subscribe" type="email" name="subscribe" placeholder="E-mail" id="subscribe">
+                <button class="btn-subscribe">Подписаться</button>
             </div>
         </nav>
-    </footer> -->
+    </footer>
     <script src="./js/modal.js"></script>
     <script src="./js/menu.js"></script>
 </body>
 
 </html>
+
+
+<!-- <section class="section reviews">
+            <div class=container> -->
+
+
+
+<!-- <h2 class="section-title">Заголовок второй секции</h2>
+                <ul class="reviews-set">
+
+                    <li class="reviews-item">1</li>
+                    <li class="reviews-item">2</li>
+                    <li class="reviews-item">3</li> -->
+
+<!-- 
+                </ul>
+            </div>
+
+        </section> -->
