--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
 
     <footer class="footer-main">
         <nav class="container-footer">
-            <div>
+            <div class="web-footer">
                 <a href="index.html" class="webstudio webstudio-footer"><span class="accent">Web</span>Studio</a>
 
                 <ul class="footer-link">
