--- a/index.html
+++ b/index.html
@@ -193,7 +193,9 @@
                     <li class="team-li">
 
                         <a href="" class="a-link">
-                            <img src="img/1.Product_Designer.jpg" alt="" width="270">
+                            <img class="team-img"
+                                srcset="img/1.Product_Designer.jpg 1x, img/1.Product_Designer_2.jpg 2x"
+                                src="img/1.Product_Designer.jpg" alt="">
                             <p class="team-name">Игорь Демьяненко</p>
 
                             <p class="p-position">Product Designer</p>
@@ -241,7 +243,9 @@
                     </li>
                     <li class="team-li">
                         <a href="" class="a-link">
-                            <img src="img/2.Frontend_Developer.jpg" alt="" width="270">
+                            <img class="team-img"
+                                srcset="img/2.Frontend_Developer.jpg 1x, img/2.Frontend_Developer_2.jpg 2x"
+                                src="img/2.Frontend_Developer.jpg" alt="">
 
                             <p class="team-name">Ольга Репина</p>
 
@@ -288,7 +292,8 @@
                     </li>
                     <li class="team-li">
                         <a href="" class="a-link">
-                            <img src="img/3.Marketing.jpg" alt="" width="270">
+                            <img class="team-img" srcset="img/3.Marketing.jpg 1x, img/3.Marketing_2.jpg 2x"
+                                src="img/3.Marketing.jpg" alt="">
 
                             <p class="team-name"> Николай Тарасов</p>
 
@@ -335,7 +340,8 @@
                     </li>
                     <li class="team-li">
                         <a href="" class="a-link">
-                            <img src="img/4.UI_Designer.jpg" alt="" width="270">
+                            <img class="team-img" srcset="img/4.UI_Designer.jpg 1x, img/4.UI_Designer_2.jpg 2x"
+                                src="img/4.UI_Designer.jpg" alt="">
 
                             <p class="team-name">Михаил Ермаков</p>
 
