--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                                                 ./img/team/tablet/pd@2x.jpg 2x" media="(min-width: 768px)" />
                                 <source srcset="./img/team/mobile/pd.jpg 1x,
                                                 ./img/team/mobile/pd@2x.jpg 2x" media="(min-width: 480px)" />
-                                <img class="team-img" src="./images/team/desktop/pd.jpg" alt="Фото Игоря Демьяненко" />
+                                <img class="team-img" src="./img/team/desktop/pd.jpg" alt="Фото Игоря Демьяненко" />
                             </picture>
 
                             <p class="team-name">Игорь Демьяненко</p>
