--- a/portfolio.html
+++ b/portfolio.html
@@ -348,7 +348,7 @@
     <footer class="footer-main">
         <nav class="container-footer">
             <div class="web-footer">
-                <a href="index.html" class="webstudio webstudio-footer"><span class="accent">Web</span>Portfolio</a>
+                <a href="index.html" class="webstudio webstudio-footer"><span class="accent">Web</span>Studio</a>
 
                 <ul class="footer-link">
                     <li class="footer-margin"><a class="link footer-adress"
