--- a/portfolio.html
+++ b/portfolio.html
@@ -328,7 +328,7 @@
                                     <source srcset="./img/portfolio/mobile/img9.jpg 1x,
                                         ./img/portfolio/mobile/img9@2x.jpg 2x" media="(min-width: 480px)" />
                                     <img class="portfolio-img" src="./img/portfolio/desktop/business.jpg"
-                                        alt="Брелок" />
+                                        alt="Монитор" />
                                 </picture>
 
                                 <div class="animation-overlay">
